I am learning how to make user posts and work with database

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,5 +1,25 @@
-img{
-    width: 200px;
-    height: 200px;
-    margin-left: 350px;
+h2{
+    color: black;
+    text-align: center;
+}
+a{
+    color: orange;
+    text-decoration: none;
+    text-align: center;
+
+}
+
+.container1{
+    border-style: outset;
+    border-color: black;
+    border-width: 2px;
+    padding: 50px;
+}
+
+.container2{
+    border-style: outset;
+    border-color: black;
+    border-width: 2px;
+   
+
 }
