--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,40 +9,53 @@
         <title> Flask Templates Demo</title>
     {% endif %}
 
-    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
+    
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
- 
+
+    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
  
       
   </head>
   <body>
-    <div class="container text-center">
+    
             
-        <div class="row">
+        <div class=" text-center row">
           
-            <div class="col-md-6">
-                <h1><a href="{{ url_for ('index') }}">MUTHONI PROPERTIES</a></h1>
+            
+            <div class="col-md-4">
+                <h1 style="color: orange;"><a href="{{ url_for ('index') }}">HOME</a></h1>
             </div>
-           
-            <div class="col-md-6">
-                {% if current_user. is_authenticated%}
-                <h1><a href="{{ url_for ('logout') }}">Logout</a></h1>
-                {% else %}
-                <h1><a href="{{ url_for ('login') }}">Login</a></h1>
-                {% endif %}
+            
+            {% if current_user.is_authenticated%}
+                <div class="col-md-4">
+                    <h1 ><a class="text-success" href="{{ url_for ('profile', username=current_user.username) }}">Profile</a></h1>
+                </div> 
+                <div class="col-md-4">
+                    <h1 ><a class="text-danger" href="{{ url_for ('logout') }}">Logout</a></h1>
+                </div>
+                
+                
+            {% else %}
+            <div class="col-md-8">
+                <h1 style="color: green;"><a href="{{ url_for ('login') }}">Login</a></h1>
             </div>
+            
+                
+            {% endif %}
+            
+            
          
             
         <hr>
          <!-- Beginning of flash message -->
-    <div class="row text-center">
-        <div class="row col-md-12">
+    <div class="row">
+        <div class="text-center col-md-12">
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
                     {% for message in messages %}
-                        <div>
-                            {{ message }}
+                        <div class="alert alert-success" role="alert">
+                         {{message}}
                         </div>
                     {% endfor %}
                 {% endif %}
